--- a/doc/ch02_logistic_regression/01_逻辑回归与最大似然估计.md
+++ b/doc/ch02_logistic_regression/01_逻辑回归与最大似然估计.md
@@ -163,6 +163,10 @@ $$
 
 ![[公式]](https://www.zhihu.com/equation?tex=L%28%5Ctheta%29%3DL%28x_1%2Cx_2%2Cx_3%2C...%2Cx_n%3B%5Ctheta%29%3D%5Cprod_%7Bi%3D1%7D%5E%7Bn%7Df%28x_i%3B%5Ctheta%29)
 
+最大似然函数的图像类似如下的形状
+
+<img src="https://gitee.com/jhongtao/mdpic/raw/master/mdimg/20210618092218.png" height="300">
+
 ### 1.3.3 最大似然估计的思想
 
 显然，似然函数 ![[公式]](https://www.zhihu.com/equation?tex=L%28x_1%2Cx_2%2Cx_3%2C...%2Cx_n%3B%5Ctheta%29) 指的就是随机变量 ![[公式]](https://www.zhihu.com/equation?tex=X) 取到指定的这一组样本值： ![[公式]](https://www.zhihu.com/equation?tex=x_1%2Cx_2%2Cx_3%2C...%2Cx_n) 时的概率的大小。当未知的待估计的参数 ![[公式]](https://www.zhihu.com/equation?tex=%5Ctheta) 取不同的值时，计算出来的概率的值会发生变化。
@@ -185,7 +189,7 @@ $$
 
 即：在给定概率模型和一组相互独立的观测样本 ![[公式]](https://www.zhihu.com/equation?tex=x_1%2Cx_2%2Cx_3%2C...%2Cx_n) 的基础上，求解使得似然函数 ![[公式]](https://www.zhihu.com/equation?tex=+L%28%5Ctheta%29%3DL%28x_1%2Cx_2%2Cx_3%2C...%2Cx_n%3B%5Ctheta%29%3D%5Cprod_%7Bi%3D1%7D%5E%7Bn%7Dp%28x_i%3B%5Ctheta%29) 取得最大值的未知参数 ![[公式]](https://www.zhihu.com/equation?tex=%5Ctheta) 的取值。当然，如果是连续型随机变量，则把似然函数替换成 ![[公式]](https://www.zhihu.com/equation?tex=L%28%5Ctheta%29%3DL%28x_1%2Cx_2%2Cx_3%2C...%2Cx_n%3B%5Ctheta%29%3D%5Cprod_%7Bi%3D1%7D%5E%7Bn%7Df%28x_i%3B%5Ctheta%29) 即可。
 
-那么下面问题就变得很直接了，对似然函数求导，使得导数为0的 ![[公式]](https://www.zhihu.com/equation?tex=%5Ctheta) 的取值，就是我们要找的最大似然估计值 ![[公式]](https://www.zhihu.com/equation?tex=%5Chat%7B%5Ctheta%7D) 。
+那么下面问题就变得很直接了，对似然函数求导使得导数为$0$的 ![[公式]](https://www.zhihu.com/equation?tex=%5Ctheta) 的取值，就是我们要找的最大似然估计值 ![[公式]](https://www.zhihu.com/equation?tex=%5Chat%7B%5Ctheta%7D) 。
 
 这个连乘的函数求导数比较复杂，由于函数 ![[公式]](https://www.zhihu.com/equation?tex=g%28x%29) 和 ![[公式]](https://www.zhihu.com/equation?tex=ln%28g%28x%29%29) 的单调性是保持一致的。因此我们可以选择把似然函数 ![[公式]](https://www.zhihu.com/equation?tex=L%28x%29) 转化为 ![[公式]](https://www.zhihu.com/equation?tex=ln%28L%28x%29%29) ，这样连乘就变成了连加：
 
@@ -309,7 +313,9 @@ $$
 
 
 
-## 什么是逻辑回归
+## 2.2 逻辑回归理论部分
+
+### 2.2.1 什么是逻辑回归
 
 逻辑回归是一种利用样本数据求取逻辑模型，并用于新数据进行分类的一种方法。在逻辑回归中，数据样本的假设模型不再是线性的。而是非线性的逻辑模型$sigmod$，如下图所示。输入样本数据，输出该样本属于某个类的概率。
 
@@ -321,7 +327,7 @@ $$
 
 ![](https://gitee.com/jhongtao/mdpic/raw/master/mdimg/20210616154358.jpg)
 
-## 逻辑回归如何进行分类
+2.2.2 逻辑回归如何进行分类
 
 通过逻辑回归模型，输出结果被压缩到$0\sim 1$的$S$形曲线中，其含义相当于样本为正的概率。
 
@@ -342,7 +348,7 @@ $$
 </tr>
 
 
-## 逻辑回归损失函数
+### 2.2.3 逻辑回归损失函数
 
 逻辑回归，通常作为分类算法，只可以解决二分类问题。最终得出的结果是一个概率值。
 
@@ -376,7 +382,7 @@ $$
 
 这个函数 ![[公式]](https://www.zhihu.com/equation?tex=F%28%5Cbm%7Bw%7D%29) 又叫做它的**损失函数**。损失函数可以理解成衡量我们当前的模型的输出结果，跟实际的输出结果之间的差距的一种函数。这里的损失函数的值等于事件发生的总概率，我们希望它越大越好。但是跟损失的含义有点儿违背，因此也可以在前面取个负号。
 
-## 最大似然估计
+### 2.2.4 最大似然估计求解参数
 
 我们在真实世界中并不能直接看到概率是多少，我们只能观测到事件是否发生。也就是说，我们只能知道一个样本它实际的标签是$1$还是$0$。那么我们如何估计参数 ![[公式]](https://www.zhihu.com/equation?tex=%5Cbm%7Bw%7D) 跟$b$的值呢？
 
@@ -388,7 +394,7 @@ $$
 
 ![[公式]](https://www.zhihu.com/equation?tex=%5Cbm%7Bw%5E%2A%7D+%3D+arg%5Cmax_%7Bw%7DF%28%5Cbm%7Bw%7D%29+%3D+-arg%5Cmin_%7Bw%7DF%28%5Cbm%7Bw%7D%29+)
 
-##  求![[公式]](https://www.zhihu.com/equation?tex=F%EF%BC%88%5Cbm%7Bw%7D%EF%BC%89)的梯度![[公式]](https://www.zhihu.com/equation?tex=%5Cnabla+F%EF%BC%88%5Cbm%7Bw%7D%EF%BC%89)
+###  2.2.5 求![[公式]](https://www.zhihu.com/equation?tex=F%EF%BC%88%5Cbm%7Bw%7D%EF%BC%89)的梯度![[公式]](https://www.zhihu.com/equation?tex=%5Cnabla+F%EF%BC%88%5Cbm%7Bw%7D%EF%BC%89)
 
 **梯度的定义**
 
@@ -424,7 +430,7 @@ $p$是一个关于变量 ![[公式]](https://www.zhihu.com/equation?tex=%5Cbm%7B
 
 
 
-## 梯度下降法（GD）与随机梯度下降法（SGD）
+### 2.2.6 梯度下降法（GD）与随机梯度下降法（SGD）
 
 在这里我先解释一个问题：**为什么可以用梯度下降法？**
 
@@ -460,7 +466,7 @@ $p$是一个关于变量 ![[公式]](https://www.zhihu.com/equation?tex=%5Cbm%7B
 
 
 
-### 逻辑回归的可解释性
+### 2.2.7 逻辑回归的可解释性
 
 逻辑回归最大的特点就是**可解释性**很强。
 
@@ -472,7 +478,7 @@ $p$是一个关于变量 ![[公式]](https://www.zhihu.com/equation?tex=%5Cbm%7B
 
 根据逻辑回归里的权重向量在每个特征上面的大小，就能够对于每个特征的重要程度有一个量化的清楚的认识，这就是为什么说逻辑回归模型有着很强的解释性的原因。
 
-### 决策边界
+### 2.2.8 决策边界
 
 补充一个问题，逻辑回归的决策边界是否是线性的，相当于问曲线：
 
@@ -486,7 +492,7 @@ $p$是一个关于变量 ![[公式]](https://www.zhihu.com/equation?tex=%5Cbm%7B
 
 ![img](https://pic3.zhimg.com/80/v2-3f2227d606b29be9619566b88d1f1912_720w.jpg)
 
-### 逻辑回归理论小结
+### 2.2.9 逻辑回归理论小结
 
 终于一切都搞清楚了，现在我们来理一理思路，首先逻辑回归模型长这样：
 
@@ -502,7 +508,7 @@ $p$是一个关于变量 ![[公式]](https://www.zhihu.com/equation?tex=%5Cbm%7B
 
 每次迭代都从所有样本中随机抽取一个 ![[公式]](https://www.zhihu.com/equation?tex=%28%5Cbm%7Bx_i%7D%2Cy_i%29) 来代入上述方程。
 
-## 从函数的角度理解交叉熵损失函数
+## 2.3 从函数的角度理解交叉熵损失函数
 
 <table>
     <tr>
@@ -596,9 +602,9 @@ $$
 
 这个函数是一个凸函数，他没有公式解，使用梯度下降法即可求解参数$w$。
 
-## 逻辑回归向量化案例
+## 2.4 逻辑回归向量化案例
 
-### 数据初始化
+### 2.4.1 数据初始化
 
 以一个二维影响因素为例：
 $$
@@ -638,7 +644,7 @@ W_{3\times1}={W}'=
 \end{align}
 $$
 
-### 模型及损失函数
+### 2.4.2 模型及损失函数
 
 假设数据集$Data$有十条记录则,$X$的维度为$10\times 3$,$Y$的维度为$10\times1$
 
@@ -679,13 +685,13 @@ X^{T}*\left\{ \left(\frac{-Y*(1-H)+H(1-Y)}{H(1-H)} \right)*H(1-H)\right \}\\
 $$
 
 
-### 梯度下降法求解参数$W$
+### 2.4.3 梯度下降法求解参数$W$
 
 1. 初始化$W$
 2. 更新$W$:$W_{t+1}=W_{t}-\alpha*\frac{\partial Cost}{\partial W}$
 3. 重复多次迭代
 
-### code
+### 2.4.4 code
 
 ```python
 #!/usr/bin/env python
@@ -768,15 +774,17 @@ if __name__=='__main__':
 
 ![image-20210617192056419](https://gitee.com/jhongtao/mdpic/raw/master/mdimg/20210617192058.png)
 
-# 逻辑回归肿瘤分类案例
+## 2.5 逻辑回归肿瘤分类案例
 
-数据集
+### 2.5.1 数据集
 
 data：https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/
 
 ![](https://gitee.com/jhongtao/mdpic/raw/master/mdimg/20210618080555.png)
 
-code
+
+
+### 2.5.2 code
 
 ```python
 #!/usr/bin/env python
@@ -873,7 +881,109 @@ if __name__ == '__main__':
 
 ```
 
+**混淆矩阵**
 
+![image-20210618083148400](https://gitee.com/jhongtao/mdpic/raw/master/mdimg/20210618083149.png)
+
+### 2.5.3 分类评估方法
+
+#### 2.5.3.1 精确率与召回率
+
+##### 混淆矩阵
+
+在分类任务下，预测结果(Predicted Condition)与正确标记(True Condition)之间存在四种不同的组合，构成混淆矩阵(适用于多分类)
+
+|            | 预测为正例 | 预测未假例 |
+| ---------- | ---------- | ---------- |
+| 真实为正例 | 真正例TP   | 伪反例FN   |
+| 真实为假例 | 伪正例FP   | 真返例TN   |
+
+##### 精确率(Precision)与召回率(Recall)
+
+**精确率**：预测结果为正例样本中真实为正例的比例，（查的准不准）
+$$
+\frac{TP}{TP+TF}
+$$
+
+
+**召回率**：真实为正例的样本中预测结果为正例的比例，（查得全，对正样本的区分能力）
+
+**TPR:正例的召回率**  所有真实类别为正例的样本中，预测类别也为正例的比例
+$$
+TPR=\frac{TP}{TP+FN}
+$$
+**FPR:假例的召回率：**所有真实类别为假例的样本中，预测类别为正例的比例
+$$
+FPR=\frac{FP}{FP+TN}
+$$
+
+
+**F1-score**，反映了模型的稳健型
+
+
+$$
+F_{1}=\frac{2TP}{2TP+FP+FN}
+$$
+
+
+
+
+**分类评估报告api**
+
+sklearn.metrics.classification_report(y_true, y_pred, labels=[], target_names=None )
+
+y_true：真实目标值
+
+y_pred：估计器预测目标值
+
+labels:指定类别对应的数字
+
+target_names：目标类别名称
+
+return：每个类别精确率与召回率
+
+#### 2.5.3.2 ROC曲线与AUC指标
+
+**ROC曲线**
+
+<img src="https://gitee.com/jhongtao/mdpic/raw/master/mdimg/20210618085832.png" height="300">
+
+**说明：**
+
+1. 假值的召回率FPR作为横坐标
+2. 真值的召回率TPR作为纵坐标
+3. Threshold是阈值的意思
+4. 阈值从0变化到1，才会得到不同的TPR金额FPR，才可以有很多的点，去绘制ROC曲线
+5. 模型越好，蓝线越弯向于左上角
+6. 这样可以看出模型的好坏，对比两个模型的ROC
+7. 但是从ROC图形来看模型好不好是我们人工看的，计算机怎么识别呢？这就需要AUC指标了
+8. 红色的这根线就是随便猜测的一个模型，最差的得到的就是红色的这个模型
+9. ROC曲线的横轴就是FPRate，纵轴就是TPRate，当二者相等时，表示的意义则是：对于不论真实类别是1还是0的样本，分类器预测为1的概率是相等的，此时AUC为0.5
+
+**AUC指标**
+
+<img src="https://gitee.com/jhongtao/mdpic/raw/master/mdimg/20210618085904.png" height="300">
+
+**说明：**
+
+1. AUC的概率意义是随机取一对正负样本，正样本得分大于负样本的概率
+2. AUC的最小值为0.5，最大值为1，取值越高越好，最终AUC的范围在[0.5, 1]之间，并且越接近1越好
+3. AUC=1，完美分类器，采用这个预测模型时，不管设定什么阈值都能得出完美预测。绝大多数预测的场合，不存在完美分类器
+4. 0.5<AUC<1，优于随机猜测。这个分类器（模型）妥善设定阈值的话，能有预测价值
+5. AUC只能用来评价二分类
+6. AUC非常适合评价样本不平衡中的分类器性能
+
+意义解释
+
+1. AUC的意思是——Area Under roc Curve，就是ROC曲线的积分，也是ROC曲线下面的面积
+2. 绘制ROC曲线的意义很明显，不断地把可能分错的情况扣除掉，从概率最高往下取的点，每有一个是负样本，就会导致分错排在它下面的所有正样本，所以要把它下面的正样本数扣除掉（1-TPR，剩下的正样本的比例）。总的ROC曲线绘制出来了，AUC就定了，分对的概率也能求出来了
+
+**AUC计算API**
+
+1. from sklearn.metrics import roc_auc_score
+   1. 计算ROC曲线面积，即AUC值
+   2. y_true：每个样本的真实类别，必须为0(反例),1(正例)标记
+   3. y_score：预测得分，可以是正类的估计概率、置信值或者分类器方法的返回值
 
 # 参考文献
 
