--- a/code/ch03_fcnn/fcnn.ipynb
+++ b/code/ch03_fcnn/fcnn.ipynb
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "id": "5bdfae58-ff5e-4b95-90e3-2f0417c6ea09",
    "metadata": {},
    "outputs": [
@@ -751,6 +751,80 @@
     "    z = x + y\n",
     "    print(z)\n",
     "    print(z.to('cpu', torch.double))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7871e7d4-725e-4373-8fec-d8dd8d45ae91",
+   "metadata": {},
+   "source": [
+    "# 2. 全连接神经网络"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3db46219-b214-481e-92b0-d7f88cadd07a",
+   "metadata": {},
+   "source": [
+    "## 2.1 numpy实现两层全连接神经网络"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e91c766-dbe9-4508-b193-6621d9d1ebaa",
+   "metadata": {},
+   "source": [
+    "- 一个全连接ReLU神经网络，一个隐藏层，没有bias。用来从x预测y,使用$L_{2}$Loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16bdacbf-7835-4316-970c-c21c027f8238",
+   "metadata": {},
+   "source": [
+    "- 这一实现完全使用numpy来计算前向神经网络，loss，和反向传播\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34ac6444-8af1-47ee-970e-778c04b75a4c",
+   "metadata": {},
+   "source": [
+    "- numpy ndarray 是一个普通的n为array。它不知道任何关于深度学习或者梯度的知识，也不知道计算图，只能是一种运来计算数学运算的数据结构。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f16a1bee-f397-42a9-962f-d6ea819c0856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "N, D_in, H, D_out = 4, 100,20,10   # N是batch, D_in是输入维度，H为隐藏层维度，D_OUT为输出维度\n",
+    "\n",
+    "# 创建输入输出数据\n",
+    "x = np.random.randn(N, D_in)\n",
+    "Y = np.random.randn(N, D_out)\n",
+    "\n",
+    "# 初始化权重参数\n",
+    "w1 = np.random.rand(D_in, H)\n",
+    "W2 = np.random.rand(H, D_out)\n",
+    "\n",
+    "# 学习率\n",
+    "lr = le-6\n",
+    "\n",
+    "for t in range(500):\n",
+    "    # 前向过程\n",
+    "    h = x.dot(w1)\n",
+    "    h_relu = np.maximum(h, 0 )\n",
+    "    y_pred = h_relu.dot(w2)\n",
+    "    \n",
+    "    # 计算损失函数\n",
+    "    loss = np.square(y_pred -y).sum()\n",
+    "    print(t, loss)\n"
    ]
   }
  ],
