--- a/ipynb/2-propaedeutics/Untitled.ipynb
+++ b/ipynb/2-propaedeutics/Untitled.ipynb
@@ -34,9 +34,88 @@
     "<font size=4>想要深入理解view与reshape的区别，首先要理解一些有关PyTorch张量存储的底层原理，比如tensor的头信息区（Tensor）和存储区 （Storage）以及tensor的步长Stride。不用慌，这部分的原理其实很简单的(^-^)!</font>\n",
     "\n",
     "<font size=5>1、PyTorch张量存储的底层原理</font></br>\n",
-    "<font size=4>tensor数据采用头信息区（Tensor）和存储区 （Storage）分开存储的形式，如图1所示。变量名以及其存储的数据是分为两个区域分别存储的。比如，我们定义并初始化一个tensor，tensor名为A，A的形状size、步长stride、数据的索引等信息都存储在头信息区，而A所存储的真实数据则存储在存储区。另外，如果我们对A进行截取、转置或修改等操作后赋值给B，则B的数据共享A的存储区，存储区的数据数量没变，变化的只是B的头信息区对数据的索引方式。</font>\n",
+    "<font size=4>tensor数据采用头信息区（Tensor）和存储区 （Storage）分开存储的形式，如图所示。变量名以及其存储的数据是分为两个区域分别存储的。比如，我们定义并初始化一个tensor，tensor名为A，A的形状size、步长stride、数据的索引等信息都存储在头信息区（Tensor），而A所存储的真实数据则存储在存储区（Storage）。另外，如果我们对A进行截取、转置或修改等操作后赋值给B，则B的数据共享A的存储区（Storage），存储区（Storage）的数据数量没变，变化的只是B的头信息区（Tensor）对数据的索引方式。</font>\n",
     "</br>\n",
-    "![avatar](http://image109.360doc.com/DownloadImg/2021/03/1709/217856618_1_20210317091321662)\n"
+    "<img src=\"https://github.com/jhong-tao/s2dl/blob/master/ipynb/0-imgs/217856618_1_20210317091321662.jpg?raw=true\" width=500 >\n",
+    "</br>（Tensor）\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "592e96e2-ef2f-4eba-8e7e-a5264373d072",
+   "metadata": {},
+   "source": [
+    "## 共用存储区域举例\n",
+    "<font size=4>共用存储区域，当一个变量修改存储区的数据时，另一个变量的值也会跟着变化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b84503f-3c82-49b9-b6b2-9496ba65e515",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: tensor([0, 1, 2, 3, 4])\n",
+      "b: tensor([2, 3, 4])\n",
+      "id of storage of a: 2175559017080\n",
+      "id of storage of b: 2175559017080\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "a = torch.arange(5)  # 初始化张量 a 为 [0, 1, 2, 3, 4]\n",
+    "b = a[2:]            # 截取张量a的部分值并赋值给b，b其实只是改变了a对数据的索引方式\n",
+    "print('a:', a)\n",
+    "print('b:', b)\n",
+    "print('id of storage of a:', id(a.storage))  # 打印a的存储区地址\n",
+    "print('id of storage of b:', id(b.storage))  # 打印b的存储区地址,可以发现两者是共用存储区"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "291a3cf2-de84-493e-94f2-b6aa30737b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: tensor([0, 1, 2, 0, 4])\n",
+      "b: tensor([2, 0, 4])\n",
+      "id of storage of a: 2175478696680\n",
+      "id of storage of b: 2175478696680\n"
+     ]
+    }
+   ],
+   "source": [
+    "b[1] = 0    # 修改b中索引为1，即a中索引为3的数据为0\n",
+    "print('a:', a)\n",
+    "print('b:', b)\n",
+    "print('id of storage of a:', id(a.storage))  # 打印a的存储区地址,可以发现a的相应位置的值也跟着改变，说明两者是共用存储区\n",
+    "print('id of storage of b:', id(b.storage))  # 打印b的存储区地址"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d50296a-ba54-48c4-8b5b-6e71fc5bf114",
+   "metadata": {},
+   "source": [
+    "### PyTorch张量的步长（stride）属性\n",
+    "<font size=4> \n",
+    "torch的tensor也是有步长（stride）属性的，说起stride属性是不是很耳熟？是的，卷积神经网络中卷积核对特征图的卷积操作也是有stride属性的，但这两个stride可完全不是一个意思哦。\n",
+    "</font>\n",
+    "<br>\n",
+    "<font size=4 color=red>\n",
+    "stride是在指定维度dim中从一个元素跳到下一个元素所必需的步长。当没有参数传入时，返回所有步长的元组。否则，将返回一个整数值作为特定维度dim中的步长。<br>\n",
+    "tensor的步长可以理解为从指定的维度中的一个元素到下一个元素中间的跨度。<br>为方便理解，就直接用图说明了，您细细品(^-^)：    \n",
+    "</font>\n",
+    "<img src=\"\">"
    ]
   }
  ],
