--- a/ipynb/2-propaedeutics/2.1. Data Manipulation.ipynb
+++ b/ipynb/2-propaedeutics/2.1. Data Manipulation.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 2.1. 数据操作\n",
     "## 2.1.1. 入门\n",
-    "- <font size=4> torch.arang()创建一维数组"
+    "- <font size=4> torch.arange()创建一维数组"
    ]
   },
   {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "8772fe49-f727-4e95-928b-0f104b02330e",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "         [ 9, 10, 11]]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,6 +224,73 @@
    "source": [
     "x.reshape(2,2,-1)  # 该例中，自动推断了2个2行3列的张量\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "9f2ab09c-e528-465a-9bc7-13099cf4e949",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1, 2],\n",
+       "        [3, 4, 5],\n",
+       "        [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 3, 6],\n",
+       "        [1, 4, 7],\n",
+       "        [2, 5, 8]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = torch.arange(9).reshape(3, -1)\n",
+    "n = m.permute(1, 0)\n",
+    "m\n",
+    "n\n",
+    "id(m.storage()) == id(n.storage())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea2b67cf-6ffa-4564-acae-a42e8175602b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
