--- a/ipynb/2-propaedeutics/2.1.1 pytorch-view-reshape.ipynb
+++ b/ipynb/2-propaedeutics/2.1.1 pytorch-view-reshape.ipynb
@@ -193,65 +193,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 117,
    "id": "805c469a-6486-40c0-bf2d-6a7ed68d073c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0, 1],\n",
-       "        [2, 3],\n",
-       "        [4, 5]])"
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       " 0\n",
        " 1\n",
        " 2\n",
        " 3\n",
        " 4\n",
        " 5\n",
-       "[torch.LongStorage of size 6]"
+       " 6\n",
+       " 7\n",
+       " 8\n",
+       " 9\n",
+       "[torch.LongStorage of size 9]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "2175606735640"
+       "2175594912008"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "(2, 1)"
+       "(3, 1)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "torch.Size([3, 2])"
+       "torch.Size([3, 3])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -261,13 +264,13 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = torch.arange(6).reshape(3, -1)  # 3x2的tensor\n",
+    "a = torch.arange(1, 10).reshape(3, -1)  # 3x2的tensor\n",
     "a  # a的数据视图\n",
     "a.storage()  # a在内存中的存放顺序\n",
     "id(a.storage)  # a的数据地址\n",
@@ -289,54 +292,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 118,
    "id": "67a8afbf-66aa-4968-9438-898e21210ef1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0, 2, 4],\n",
-       "        [1, 3, 5]])"
+       "tensor([[1, 4, 7],\n",
+       "        [2, 5, 8],\n",
+       "        [3, 6, 9]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       " 0\n",
        " 1\n",
        " 2\n",
        " 3\n",
        " 4\n",
        " 5\n",
-       "[torch.LongStorage of size 6]"
+       " 6\n",
+       " 7\n",
+       " 8\n",
+       " 9\n",
+       "[torch.LongStorage of size 9]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "2175507137920"
+       "2175543739136"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "2175507137920"
+       "2175543739136"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -346,7 +353,7 @@
        "True"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +374,262 @@
    "source": [
     "<font size=4>\n",
     "由结果可以看出，张量a、b仍然共用存储区，并且存储区数据存放的顺序没有变化，这也充分说明了b与a共用存储区，b只是改变了数据的索引方式。那么为什么b就不符合连续性条件了呐(T-T)？其实原因很简单，我们结合下图来解释：<br>\n",
-    "<img src=\"\">"
+    "<img src=\"https://github.com/jhong-tao/s2dl/blob/master/ipynb/0-imgs/img23?raw=true\" width=800><br>\n",
+    "    转置后的tensor只是对storage区数据索引方式的重映射，但原始的存放方式并没有变化.因此，这时再看tensor b的stride，从b第一行的元素1到第二行的元素2，显然在索引方式上已经不是原来+3了，而是变成了新的+1了，你在仔细琢磨琢磨是不是这样的(^-^)。所以这时候就不能用view来对b进行shape的改变了，不然就报错咯，不信你看下面;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "7c34bace-f83d-4a37-bd60-49a649bfc997",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 4, 7, 2, 5, 8, 3, 6, 9])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "view size is not compatible with input tensor's size and stride (at least one dimension spans across two contiguous subspaces). Use .reshape(...) instead.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-119-65b395405e40>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# reshape() 方法改变tensor形状\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mview\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# view()  方法改变tensor形状，报错\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m: view size is not compatible with input tensor's size and stride (at least one dimension spans across two contiguous subspaces). Use .reshape(...) instead."
+     ]
+    }
+   ],
+   "source": [
+    "c = b.reshape(9)  # reshape() 方法改变tensor形状\n",
+    "c\n",
+    "d = b.view(9)   # view()  方法改变tensor形状，报错\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f0e3045-27d5-47d6-94f2-33bc23fa1161",
+   "metadata": {},
+   "source": [
+    "<font size=4>\n",
+    "但是嘛，上有政策下有对策，这种情况下，直接用view不行，那我就先用contiguous()方法将原始tensor转换为满足连续条件的tensor，在使用view进行shape变换，值得注意的是，这样的原理是contiguous()方法开辟了一个新的存储区给c，并改变了c原始存储区数据的存放顺序！同样的例子："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "5bf723c0-de7a-4fa4-b560-faed8242548c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4\n",
+       " 5\n",
+       " 6\n",
+       " 7\n",
+       " 8\n",
+       " 9\n",
+       "[torch.LongStorage of size 9]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4\n",
+       " 5\n",
+       " 6\n",
+       " 7\n",
+       " 8\n",
+       " 9\n",
+       "[torch.LongStorage of size 9]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       " 1\n",
+       " 4\n",
+       " 7\n",
+       " 2\n",
+       " 5\n",
+       " 8\n",
+       " 3\n",
+       " 6\n",
+       " 9\n",
+       "[torch.LongStorage of size 9]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, 1)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, 1)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2175543739136"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2175543739136"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2175549512576"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 我们来看看b的stride\n",
+    "b.stride()  \n",
+    "b.stride(0) == b.stride(1) * b.size(1)   # 显然这个时候b的stride不满足连续性条件\n",
+    "c = a.permute(1, 0).contiguous()  # 通过contiguous()   #方法将b的stride转为连续，此时会产生新的数据，相当于复制一份原来的数据\n",
+    "c.stride(0) == c.stride(1) * c.size(1)  # 此时满足了连续条件\n",
+    "a.storage()  # a的数据存储顺序\n",
+    "b.storage()  # b的数据存储顺序\n",
+    "c.storage()  # c的数据存储顺序\n",
+    "a.stride()  # stride 连续\n",
+    "b.stride()  # stride 不连续\n",
+    "c.stride()  # stride 连续，这说明contiguous方法为c另外开辟了存储区\n",
+    "a.storage().data_ptr()   # 查看a的数据地址起始位置，显然此时a的地址与c的地址不同\n",
+    "b.storage().data_ptr()   # 查看b的数据地址起始位置\n",
+    "c.storage().data_ptr()   # 查看c的数据地址起始位置，显然与a不同，这说明contiguous方法为c另外开辟了存储区,此时c不在与a共享存储区，修改数据互不影响\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc8f944-9e89-402f-bb63-d33be73ea4e5",
+   "metadata": {},
+   "source": [
+    "### 2、对 torch.reshape() 的理解\n",
+    "<font size=4>\n",
+    "    定义：\n",
+    "\n",
+    "torch.reshape(input, shape) → Tensor\n",
+    "作用：与view方法类似，将输入tensor转换为新的shape格式。\n",
+    "\n",
+    "但是reshape方法更强大，可以认为a.reshape = a.view() + a.contiguous().view()。\n",
+    "\n",
+    "即：在满足tensor连续性条件时，a.reshape返回的结果与a.view()相同，否则返回的结果与a.contiguous().view()相同。\n",
+    "\n",
+    "不信你就看人家官方的解释嘛，您在细细品：\n",
+    "</font>\n",
+    "## 四、总结\n",
+    "<font size=4>\n",
+    "torch的view()与reshape()方法都可以用来重塑tensor的shape，区别就是使用的条件不一样。view()方法只适用于满足连续性条件的tensor，并且该操作不会开辟新的内存空间，只是产生了对原存储空间的一个新别称和引用，返回值是视图。而reshape()方法的返回值既可以是视图，也可以是副本，当满足连续性条件时返回view，否则返回副本[ 此时等价于先调用contiguous()方法在使用view() ]。因此当不确能否使用view时，可以使用reshape。如果只是想简单地重塑一个tensor的shape，那么就是用reshape，但是如果需要考虑内存的开销而且要确保重塑后的tensor与之前的tensor共享存储空间，那就使用view()。\n",
+    "\n",
+    "2020.10.23\n",
+    "\n",
+    "以上是我个人看了官网的的解释并实验得到的结论，所以有没有dalao知道为啥没把view废除那？是不是还有我不知道的地方\n",
+    "\n",
+    "2020.11.14\n",
+    "\n",
+    "为什么没把view废除那？最近偶然看到了些资料，又想起了这个问题，觉得有以下原因：\n",
+    "\n",
+    "1、在PyTorch不同版本的更新过程中，view先于reshape方法出现，后来出现了鲁棒性更好的reshape方法，但view方法并没因此废除。其实不止PyTorch，其他一些框架或语言比如OpenCV也有类似的操作。\n",
+    "\n",
+    "2、view的存在可以显示地表示对这个tensor的操作只能是视图操作而非拷贝操作。这对于代码的可读性以及后续可能的bug的查找比较友好。\n",
+    "\n",
+    "总之，我们没必要纠结为啥a能干的b也能干，b还能做a不能干的，a存在还有啥意义的问题。就相当于马云能日赚1个亿而我不能，那我存在的意义是啥。。。存在不就是意义吗？存在即合理，最重要的是我们使用不同的方法可以不同程度上提升效率，何乐而不为？\n",
+    "</font>\n",
+    "# 参考文献\n",
+    "http://www.360doc.com/content/21/0317/09/7669533_967384667.shtml"
    ]
   }
  ],
