--- a/ipynb/2-propaedeutics/2.6. 概率.ipynb
+++ b/ipynb/2-propaedeutics/2.6. 概率.ipynb
@@ -1,6 +1,40 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "a7cd7c68-fdef-4649-a21d-2b810365eefd",
+   "metadata": {},
+   "source": [
+    "# 2.6. 概率\n",
+    "<font size=4>\n",
+    "简单地说，机器学习就是做出预测。\n",
+    "\n",
+    "根据病人的临床病史，我们可能想预测他们在下一年心脏病发作的概率。 在飞机喷气发动机的异常检测中，我们想要评估一组发动机读数为正常运行情况的概率有多大。 在强化学习中，我们希望智能体（agent）能在一个环境中智能地行动。 这意味着我们需要考虑在每种可行的行为下获得高奖励的概率。 当我们建立推荐系统时，我们也需要考虑概率。 例如，假设我们为一家大型在线书店工作，我们可能希望估计某些用户购买特定图书的概率。 为此，我们需要使用概率学。 有完整的课程、专业、论文、职业、甚至院系，都致力于概率学的工作。 所以很自然地，我们在这部分的目标不是教授你整个科目。 相反，我们希望教给你在基础的概率知识，使你能够开始构建你的第一个深度学习模型， 以便你可以开始自己探索它。<br><br>\n",
+    "\n",
+    "现在让我们更认真地考虑第一个例子：根据照片区分猫和狗。 这听起来可能很简单，但对于机器却可能是一个艰巨的挑战。 首先，问题的难度可能取决于图像的分辨率。\n",
+    "</font>\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "study-ml(python3.7)",
+   "language": "python",
+   "name": "study-ml"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
